--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:watch": "tsc -w",
-    "dev": "nodemon ./dist/index.js"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/index.ts "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hasezoey/typegoose": "^5.9.2",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^6.0.13",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
+    "@types/shortid": "0.0.29",
+    "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "nodemon": "^2.0.15",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   }
 }
